--- a/Newbie/nft-preview-card-component-main/css/style.css
+++ b/Newbie/nft-preview-card-component-main/css/style.css
@@ -15,6 +15,112 @@
   --neutral-card-bg: hsl(216, 50%, 16%);
   --neutral-line: hsl(215, 32%, 27%);
   --white: hsl(0, 0%, 100%);
+
+  --border-radius: 8px;
+}
+
+hr {
+  height: 0.5px;
+  background-color: var(--neutral-line);
+  border: none;
+}
+
+.main-container {
+  background-color: var(--neutral-main-bg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.nft-card {
+  background-color: var(--neutral-card-bg);
+  border-radius: var(--border-radius);
+  padding: 1.2em;
+  max-width: 20em;
+  max-height: 40em;
+  font-family: var(--main-font);
+
+  /* h-offset v-offset blur spread color */
+  box-shadow: 0em 0.9em 0.7em 0.7em rgba(15, 11, 41, 0.308);
+}
+
+.img-container {
+  margin: 0 auto;
+}
+
+.img-container img {
+  width: 100%;
+  height: auto;
+  border-radius: var(--border-radius);
+}
+
+.nft-description {
+  margin: 1.5em auto;
+  /* border: 1px dashed red; */
+}
+
+.nft-description h3 {
+  color: var(--white);
+  font-weight: 600;
+}
+
+.nft-description p {
+  color: var(--primary-soft-blue);
+  font-size: var(--text-para);
+  font-weight: 300;
+  margin: 1em auto;
+}
+
+.nft-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 1.5em;
+}
+
+.info-aligned {
+  display: flex;
+  align-items: center;
+  gap: 0.4em;
+}
+
+.price img {
+  align-self: center;
+}
+
+.price span {
+  color: var(--primary-cyan);
+  font-weight: 600;
+}
+
+.date span {
+  color: var(--primary-soft-blue);
+  font-weight: 400;
+}
+
+.author-container {
+  margin: 1em auto 0.7em auto;
+  display: flex;
+  align-items: center;
+}
+
+.author-container img {
+  width: 12%;
+  border: 1px solid #fff;
+  border-radius: 50%;
+}
+
+.author-container span {
+  color: var(--primary-soft-blue);
+  padding-left: 0.8em;
+  font-weight: 300;
+}
+
+.author-container a:link,
+.author-container a:visited {
+  text-decoration: none;
+  color: #fff;
 }
 
 /* 
