--- a/Newbie/order-summary-component-main/css/style.css
+++ b/Newbie/order-summary-component-main/css/style.css
@@ -14,6 +14,27 @@
   --neutral-very-pale-blue: hsl(225, 100%, 98%);
   --neutral-desaturate-blue: hsl(224, 23%, 55%);
   --neutral-dark-blue: hsl(223, 47%, 23%);
+  --bg-img-desktop: url("/images/pattern-background-desktop.svg");
+  --bg-img-mobile: url("/images/pattern-background-mobile.svg");
+  --bg-repeat: no-repeat;
+  --bg-size: cover;
+}
+
+body {
+  background-color: var(--primary-pale-blue);
+  background-image: var(--bg-img-desktop);
+  background-repeat: var(--bg-repeat);
+  background-size: var(--bg-size);
+}
+
+.main-container {
+  font-family: var(--primary-font);
+}
+
+@media screen and (max-width: 375px) {
+  body {
+    background-image: var(--bg-img-mobile);
+  }
 }
 
 /* 
