--- a/Newbie/order-summary-component-main/css/style.css
+++ b/Newbie/order-summary-component-main/css/style.css
@@ -9,15 +9,18 @@
 :root {
   --primary-font: "Red Hat Display", sans-serif;
   --para-font-size: 1rem; /* 16px */
+
   --primary-pale-blue: hsl(225, 100%, 94%);
   --primary-bright-blue: hsl(245, 75%, 52%);
   --neutral-very-pale-blue: hsl(225, 100%, 98%);
   --neutral-desaturate-blue: hsl(224, 23%, 55%);
   --neutral-dark-blue: hsl(223, 47%, 23%);
+
   --bg-img-desktop: url("/images/pattern-background-desktop.svg");
   --bg-img-mobile: url("/images/pattern-background-mobile.svg");
   --bg-repeat: no-repeat;
   --bg-size: cover;
+  --border-radius: 15px;
 }
 
 body {
@@ -29,15 +32,43 @@ body {
 
 .main-container {
   font-family: var(--primary-font);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
+.order-card-container {
+  max-width: 454px;
+  max-height: 698px;
+  min-width: 454px;
+  min-height: 698px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  background-color: var(--neutral-very-pale-blue);
+  border-radius: var(--border-radius);
+}
+
+header {
+  width: inherit;
+  border-radius: var(--border-radius);
+}
+
+header img {
+  width: 100%;
+  height: auto;
+  border-top-left-radius: var(--border-radius);
+  border-top-right-radius: var(--border-radius);
+}
+
+/* 
+    Mobile: 375px
+*/
 @media screen and (max-width: 375px) {
   body {
     background-image: var(--bg-img-mobile);
   }
 }
-
-/* 
-    - Mobile: 375px
-    - Desktop: 1440px
-*/
