fixed background image size from cover to contain

--- a/Newbie/order-summary-component-main/css/style.css
+++ b/Newbie/order-summary-component-main/css/style.css
@@ -19,7 +19,7 @@
   --bg-img-desktop: url("/images/pattern-background-desktop.svg");
   --bg-img-mobile: url("/images/pattern-background-mobile.svg");
   --bg-repeat: no-repeat;
-  --bg-size: cover;
+  --bg-size: contain;
   --border-radius: 15px;
 }
 
