--- a/Newbie/order-summary-component-main/css/style.css
+++ b/Newbie/order-summary-component-main/css/style.css
@@ -15,6 +15,7 @@
   --neutral-very-pale-blue: hsl(225, 100%, 98%);
   --neutral-desaturate-blue: hsl(224, 23%, 55%);
   --neutral-dark-blue: hsl(223, 47%, 23%);
+  --hover-color: rgba(119, 108, 240, 255);
 
   --bg-img-desktop: url("/images/pattern-background-desktop.svg");
   --bg-img-mobile: url("/images/pattern-background-mobile.svg");
@@ -48,8 +49,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  /* justify-content: space-between; */
 
-  background-color: var(--neutral-very-pale-blue);
+  background-color: #ffffff;
   border-radius: var(--border-radius);
   box-shadow: var(--shadow-box);
 }
@@ -70,9 +72,11 @@ summary {
   border: 1px solid pink;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
+  align-items: stretch;
+  /* justify-content: space-between; */
   /* height: 460px; */
+  margin: 0 2em;
+  text-align: center;
 }
 
 summary h1,
@@ -92,21 +96,59 @@ summary p,
   align-items: center;
   justify-content: space-around;
   gap: 3em;
-  border: 1px solid orange;
+
+  background-color: var(--neutral-very-pale-blue);
+  border-radius: var(--border-radius);
+
+  margin-bottom: 2em;
 }
 
 /* .order-card-summary-annual-plan span h4 {} */
 
 /* .order-card-summary-annual-plan span p {} */
 
-/* .order-card-summary-annual-plan a:link, .order-card-summary-annual-plan a:visited, {} */
-/* .order-card-summary-annual-plan a:hover {} */
+.order-card-summary-annual-plan a:link,
+.order-card-summary-annual-plan a:visited {
+  text-decoration: underline;
+  font-weight: 700;
+  color: var(--primary-bright-blue);
+  transition: all 0.15s ease-in-out;
+}
 
-/* button {} */
+.order-card-summary-annual-plan a:hover {
+  cursor: ponter;
+  text-decoration: none;
+  color: var(--hover-color);
+}
+
+button {
+  color: #ffffff;
+  font-family: var(--primary-font);
+  font-size: 0.9rem;
+  font-weight: 700;
+  background-color: var(--primary-bright-blue);
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0px 10px 20px 5px rgba(0, 0, 0, 0.24);
+
+  padding: 1em;
+  margin-bottom: 2em;
+}
 /* button:hover {} */
 
-/* .cancel-link:link, .cancel-link:visited {} */
-/* .cancel-link:hover */
+.cancel-link:link,
+.cancel-link:visited {
+  text-decoration: none;
+  color: var(--neutral-desaturate-blue);
+  font-weight: 900;
+  font-size: 0.9rem;
+  transition: color 0.15s ease-in-out;
+}
+
+.cancel-link:hover {
+  cursor: pointer;
+  color: var(--neutral-dark-blue);
+}
 
 /* 
     Mobile: 375px
