--- a/Newbie/order-summary-component-main/css/style.css
+++ b/Newbie/order-summary-component-main/css/style.css
@@ -49,7 +49,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: space-between; */
 
   background-color: #ffffff;
   border-radius: var(--border-radius);
@@ -69,14 +68,24 @@ header img {
 }
 
 summary {
-  border: 1px solid pink;
+  /* border: 1px solid pink; */
   display: flex;
   flex-direction: column;
   align-items: stretch;
   /* justify-content: space-between; */
   /* height: 460px; */
-  margin: 0 2em;
+  margin: 0 3em;
   text-align: center;
+}
+
+summary h1 {
+  margin-top: 1.25em;
+}
+
+summary .description {
+  margin-top: 0.7em;
+  padding: 0 2em;
+  line-height: 1.7rem;
 }
 
 summary h1,
@@ -94,17 +103,17 @@ summary p,
 .order-card-summary-annual-plan {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   gap: 3em;
 
   background-color: var(--neutral-very-pale-blue);
   border-radius: var(--border-radius);
 
-  margin-bottom: 2em;
+  margin-top: 1em;
+  padding: 0 2em;
 }
 
 /* .order-card-summary-annual-plan span h4 {} */
-
 /* .order-card-summary-annual-plan span p {} */
 
 .order-card-summary-annual-plan a:link,
@@ -131,10 +140,15 @@ button {
   border-radius: 10px;
   box-shadow: 0px 10px 20px 5px rgba(0, 0, 0, 0.24);
 
-  padding: 1em;
-  margin-bottom: 2em;
+  padding: 1.1em;
+  margin-top: 2.3em;
+  /* margin-bottom: 2em; */
+  transition: all 0.15s ease-in-out;
 }
-/* button:hover {} */
+button:hover {
+  cursor: pointer;
+  background-color: var(--hover-color);
+}
 
 .cancel-link:link,
 .cancel-link:visited {
@@ -142,6 +156,8 @@ button {
   color: var(--neutral-desaturate-blue);
   font-weight: 900;
   font-size: 0.9rem;
+  margin: 2.5em;
+
   transition: color 0.15s ease-in-out;
 }
 
