--- a/Newbie/order-summary-component-main/css/style.css
+++ b/Newbie/order-summary-component-main/css/style.css
@@ -35,8 +35,10 @@ body {
 .main-container {
   font-family: var(--primary-font);
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 1em;
   height: 100vh;
 }
 
@@ -168,6 +170,23 @@ button:hover {
 .cancel-link:hover {
   cursor: pointer;
   color: var(--neutral-dark-blue);
+}
+
+footer {
+  font-size: 0.75rem;
+  color: var(--neutral-desaturate-blue);
+  width: fit-content;
+}
+
+footer a:link,
+footer a:visited {
+  color: var(--neutral-desaturate-blue);
+  text-decoration: none;
+  transition: color 0.15s ease-in-out;
+}
+
+footer a:hover {
+  color: var(--hover-color);
 }
 
 /* 
