--- a/Newbie/order-summary-component-main/css/style.css
+++ b/Newbie/order-summary-component-main/css/style.css
@@ -17,12 +17,12 @@
   --neutral-dark-blue: hsl(223, 47%, 23%);
   --hover-color: rgba(119, 108, 240, 255);
 
-  --bg-img-desktop: url("/images/pattern-background-desktop.svg");
-  --bg-img-mobile: url("/images/pattern-background-mobile.svg");
+  --bg-img-desktop: url("../images/pattern-background-desktop.svg");
+  --bg-img-mobile: url("../images/pattern-background-mobile.svg");
   --bg-repeat: no-repeat;
   --bg-size: contain;
   --border-radius: 15px;
-  --shadow-box: 0 5px 60px 0.5px rgba(0, 0, 0, 0.144); /*h-offset v-offset blur spread color */
+  --shadow-box: 0 5px 60px 0.5px rgba(0, 0, 0, 0.144);
 }
 
 body {
@@ -225,7 +225,6 @@ footer a:hover {
   }
 
   .right span h4 {
-    /* align-content: center; */
     margin-top: 0.3em;
     margin-left: 0.4em;
   }
