--- a/Newbie/stats-preview-card-component-main/css/style.css
+++ b/Newbie/stats-preview-card-component-main/css/style.css
@@ -116,7 +116,7 @@ body {
 .cell-right__img {
   display: block;
   width: 100%;
-  height: 100%;
+  height: 98.8%;
   object-fit: cover;
 
   border-top-right-radius: var(--radius);
@@ -128,6 +128,6 @@ body {
   font-family: var(--font-main);
   font-size: 0.8rem;
   font-weight: 400;
-  color: hsl(233, 14%, 24%);
+  color: hsla(233, 14%, 24%, 0.863);
   margin-top: 1.5em;
 }
