--- a/Newbie/stats-preview-card-component-main/css/style.css
+++ b/Newbie/stats-preview-card-component-main/css/style.css
@@ -28,7 +28,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .card {
@@ -102,22 +102,16 @@ body {
   font-size: 0.8rem;
 }
 
-/* .card__cell-right::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: var(--accent-violet);
-  opacity: 0.7;
-} */
-
 .cell-right__img {
-  display: block;
+  /* set width and height of container */
   width: 100%;
-  height: 98.8%;
-  object-fit: cover;
+  height: 400px;
+
+  background-image: linear-gradient(
+      hsla(277, 64%, 61%, 0.6),
+      hsla(277, 64%, 61%, 0.6)
+    ),
+    url("/images/image-header-desktop.jpg");
 
   border-top-right-radius: var(--radius);
   border-bottom-right-radius: var(--radius);
