--- a/Newbie/stats-preview-card-component-main/css/style.css
+++ b/Newbie/stats-preview-card-component-main/css/style.css
@@ -108,11 +108,11 @@ body {
   height: 400px;
 
   background-image: linear-gradient(
-      hsla(277, 64%, 61%, 0.6),
-      hsla(277, 64%, 61%, 0.6)
+      hsla(277, 64%, 61%, 0.7),
+      hsla(277, 64%, 61%, 0.7)
     ),
     url("/images/image-header-desktop.jpg");
-
+  background-size: 100% 400px;
   border-top-right-radius: var(--radius);
   border-bottom-right-radius: var(--radius);
 }
