--- a/Newbie/stats-preview-card-component-main/css/style.css
+++ b/Newbie/stats-preview-card-component-main/css/style.css
@@ -96,6 +96,7 @@ body {
   font-family: var(--font-secondary);
   text-transform: uppercase;
   font-size: 0.8rem;
+  letter-spacing: 0.1em;
 }
 
 .cell-right__img {
@@ -124,17 +125,49 @@ body {
 }
 
 @media screen and (max-width: 576px) {
+  body {
+    justify-content: space-between;
+  }
+
   .card {
+    height: 82vh;
     width: 90vw;
-    height: 85vh;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 30% 70%;
+    grid-template-rows: 31% 69%;
+    margin: auto 0;
   }
 
   .card__cell-left {
     grid-area: 2/3;
+    padding: 1.5em;
     text-align: center;
+  }
+
+  .cell-left__header {
+    font-size: 1.15em;
+    margin-top: 0.9em;
+  }
+
+  .cell-left__text {
+    font-size: 15.3px;
+    margin-bottom: 2em;
+  }
+
+  .cell-left__stats {
+    margin: 0 auto;
+    border: 1px solid white;
+  }
+
+  .cell-left__stats ul {
+    height: 13.95em;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .stats__headings {
+    font-size: 1.55rem;
+    margin-bottom: 0.25em;
   }
 
   .card__cell-right {
@@ -144,6 +177,15 @@ body {
 
   .footer,
   .footer__link {
-    font-size: 0.6rem;
+    font-size: 0.65rem;
+  }
+
+  .footer {
+    margin: 0 auto 1em auto;
+    display: block;
+    width: 100vw;
+    text-align: center;
+    position: fixed;
+    bottom: 2em;
   }
 }
