--- a/Newbie/stats-preview-card-component-main/css/style.css
+++ b/Newbie/stats-preview-card-component-main/css/style.css
@@ -12,7 +12,7 @@
   --stat-headings: hsla(0, 0%, 100%, 0.6);
 
   --radius: 8px;
-  --img-color-tint: hsla(286, 52%, 45%, 0.65);
+  --img-color-tint: hsla(283, 62%, 46%, 0.596);
 }
 
 *,
@@ -132,14 +132,13 @@ body {
   .card {
     height: 82vh;
     width: 90vw;
-    display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 31% 69%;
     margin: auto 0;
   }
 
   .card__cell-left {
-    grid-area: 2/3;
+    grid-area: 2/1/3/2; /*h/v/h/v*/
     padding: 1.5em;
     text-align: center;
   }
@@ -156,7 +155,6 @@ body {
 
   .cell-left__stats {
     margin: 0 auto;
-    border: 1px solid white;
   }
 
   .cell-left__stats ul {
@@ -171,8 +169,22 @@ body {
   }
 
   .card__cell-right {
-    border: 2px dashed blue;
-    grid-area: 1/2;
+    grid-area: 1/1/2/2;
+  }
+
+  .cell-right__img {
+    height: 100%;
+    background-image: linear-gradient(
+        var(--img-color-tint),
+        var(--img-color-tint)
+      ),
+      url("/images/image-header-mobile.jpg");
+    background-size: 100% 100%;
+    background-repeat: no-repeat no-repeat;
+    border-top-right-radius: var(--radius);
+    border-top-left-radius: var(--radius);
+    border-bottom-right-radius: 0;
+    filter: contrast(150%);
   }
 
   .footer,
