--- a/Newbie/stats-preview-card-component-main/css/style.css
+++ b/Newbie/stats-preview-card-component-main/css/style.css
@@ -100,7 +100,6 @@ body {
 }
 
 .cell-right__img {
-  /* set width and height of container */
   width: 100%;
   height: 400px;
 
@@ -112,7 +111,8 @@ body {
   background-size: 100% 400px;
   border-top-right-radius: var(--radius);
   border-bottom-right-radius: var(--radius);
-  filter: contrast(150%);
+  mix-blend-mode: lighten;
+  filter: contrast(130%);
 }
 
 .footer,
@@ -127,18 +127,20 @@ body {
 @media screen and (max-width: 576px) {
   body {
     justify-content: space-between;
+    min-height: auto;
   }
 
   .card {
     height: 82vh;
-    width: 90vw;
+    width: 300px;
+    /* width: 90vw; */
     grid-template-columns: 1fr;
     grid-template-rows: 31% 69%;
     margin: auto 0;
   }
 
   .card__cell-left {
-    grid-area: 2/1/3/2; /*h/v/h/v*/
+    grid-area: 2/1/3/2;
     padding: 1.5em;
     text-align: center;
   }
