correct card's image path

--- a/Newbie/stats-preview-card-component-main/css/style.css
+++ b/Newbie/stats-preview-card-component-main/css/style.css
@@ -107,7 +107,7 @@ body {
       var(--img-color-tint),
       var(--img-color-tint)
     ),
-    url("images/image-header-desktop.jpg");
+    url(../images/image-header-desktop.jpg);
   background-size: 100% 400px;
   border-top-right-radius: var(--radius);
   border-bottom-right-radius: var(--radius);
