--- a/Newbie/stats-preview-card-component-main/css/style.css
+++ b/Newbie/stats-preview-card-component-main/css/style.css
@@ -1,7 +1,6 @@
 :root {
   --font-main: "Inter", sans-serif;
   --font-secondary: "Lexend Deca", sans-serif;
-
   --text-body: 15px;
 
   --main-bg: hsl(233, 47%, 7%);
@@ -12,7 +11,7 @@
   --stat-headings: hsla(0, 0%, 100%, 0.6);
 
   --radius: 8px;
-  --img-color-tint: hsla(283, 62%, 46%, 0.596);
+  --desktop-img: url("./../images/image-header-desktop.jpg");
   --test-border: 1px solid red;
 }
 
@@ -97,25 +96,22 @@ body {
 .stats__stat {
   color: var(--stat-headings);
   font-family: var(--font-secondary);
-  text-transform: uppercase;
   font-size: 0.83rem;
   letter-spacing: 0.1em;
+  text-transform: uppercase;
 }
+
+/* #aa5bdb */
 
 .cell-right__img {
   width: 100%;
-  height: 400px;
+  height: 100%;
+  background: var(--desktop-img) var(--accent-violet) 0% 0% / 100% no-repeat
+    border-box border-box;
+  background-blend-mode: multiply;
 
-  background-image: linear-gradient(
-      var(--img-color-tint),
-      var(--img-color-tint)
-    ),
-    url("./../images/image-header-desktop.jpg");
-  background-size: 100% 400px;
   border-top-right-radius: var(--radius);
   border-bottom-right-radius: var(--radius);
-  mix-blend-mode: lighten;
-  filter: contrast(130%);
 }
 
 .footer,
@@ -130,7 +126,6 @@ body {
 @media screen and (max-width: 576px) {
   body {
     justify-content: space-between;
-    /* min-height: auto; */
   }
 
   .card {
@@ -188,6 +183,9 @@ body {
     border-top-right-radius: var(--radius);
     border-top-left-radius: var(--radius);
     border-bottom-right-radius: 0;
+
+    /* 
+    [<background-image>] [<background-color>]  [<background-position>]/[<background-size>] [<background-repeat>] [<background-origin>] [<background-clip>] [<background-attachment>] [<initial|inherit>]; */
   }
 
   .footer,
