--- a/Newbie/stats-preview-card-component-main/css/style.css
+++ b/Newbie/stats-preview-card-component-main/css/style.css
@@ -12,6 +12,7 @@
 
   --radius: 8px;
   --desktop-img: url("./../images/image-header-desktop.jpg");
+  --mobile-img: url("./../images/image-header-mobile.jpg");
   --test-border: 1px solid red;
 }
 
@@ -106,6 +107,7 @@ body {
 .cell-right__img {
   width: 100%;
   height: 100%;
+
   background: var(--desktop-img) var(--accent-violet) 0% 0% / 100% no-repeat
     border-box border-box;
   background-blend-mode: multiply;
@@ -125,15 +127,16 @@ body {
 
 @media screen and (max-width: 576px) {
   body {
-    justify-content: space-between;
+    display: block;
+    min-height: auto;
   }
 
   .card {
-    height: 82vh;
-    width: 90vw;
+    height: 815px;
+    width: 325px;
     grid-template-columns: 1fr;
     grid-template-rows: 31% 69%;
-    margin: auto 0;
+    margin: 25% auto 0 auto;
   }
 
   .card__cell-left {
@@ -143,13 +146,14 @@ body {
   }
 
   .cell-left__header {
-    font-size: 1.17em;
+    font-size: 7px;
     margin-top: 1em;
     margin-bottom: 0.7em;
   }
 
   .cell-left__text {
-    font-size: 16px;
+    font-size: 5px;
+    /* width: 50%; */
     margin-bottom: 2.3em;
   }
 
@@ -158,13 +162,17 @@ body {
   }
 
   .cell-left__stats ul {
-    height: 13.65em;
+    height: fit-content;
     flex-direction: column;
     justify-content: space-between;
   }
 
   .stats__headings {
-    font-size: 1.5rem;
+    font-size: 7px;
+  }
+
+  .stats__stat {
+    font-size: 4px;
   }
 
   .card__cell-right {
@@ -190,7 +198,7 @@ body {
 
   .footer,
   .footer__link {
-    font-size: 0.65rem;
+    font-size: 4px;
   }
 
   .footer {
