--- a/Newbie/stats-preview-card-component-main/css/style.css
+++ b/Newbie/stats-preview-card-component-main/css/style.css
@@ -68,7 +68,7 @@ body {
   margin-bottom: 4.8em;
   width: 90%;
   color: var(--main-para);
-  font-family: var(--font-secondary);
+  font-family: var(--font-main);
   font-size: var(--text-body);
   font-weight: 400;
   line-height: calc(var(--text-body) + 15px);
@@ -134,45 +134,46 @@ body {
   .card {
     height: 815px;
     width: 325px;
+    margin: 25% auto 0 auto;
     grid-template-columns: 1fr;
     grid-template-rows: 31% 69%;
-    margin: 25% auto 0 auto;
   }
 
   .card__cell-left {
     grid-area: 2/1/3/2;
-    padding: 1.5em;
+    margin: 2em;
     text-align: center;
   }
 
   .cell-left__header {
-    font-size: 7px;
-    margin-top: 1em;
-    margin-bottom: 0.7em;
+    font-size: 1.15rem;
+    margin-bottom: 1em;
   }
 
   .cell-left__text {
-    font-size: 5px;
-    /* width: 50%; */
-    margin-bottom: 2.3em;
+    font-size: 0.92rem;
+    line-height: 1.55rem;
+    width: 100%;
+    margin-bottom: 2.5em;
   }
 
   .cell-left__stats {
-    margin: 0 auto;
+    width: 100%;
+    height: 45%;
   }
 
   .cell-left__stats ul {
-    height: fit-content;
+    height: 100%;
     flex-direction: column;
     justify-content: space-between;
   }
 
   .stats__headings {
-    font-size: 7px;
+    font-size: 1.5rem;
   }
 
   .stats__stat {
-    font-size: 4px;
+    font-size: 0.8rem;
   }
 
   .card__cell-right {
