--- a/Newbie/stats-preview-card-component-main/css/style.css
+++ b/Newbie/stats-preview-card-component-main/css/style.css
@@ -198,9 +198,7 @@ body {
   .footer {
     display: block;
     width: 100vw;
-    margin: 0 auto 1em auto;
-    position: fixed;
-    bottom: 2em;
+    margin: 5em auto 1em auto;
     text-align: center;
   }
 }
