--- a/Newbie/3-column-preview-card-component-main/css/style.css
+++ b/Newbie/3-column-preview-card-component-main/css/style.css
@@ -30,6 +30,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background-color: var(--v-lightgray);
 }
 
 .grid {
