--- a/Newbie/3-column-preview-card-component-main/css/style.css
+++ b/Newbie/3-column-preview-card-component-main/css/style.css
@@ -40,6 +40,7 @@ body {
 
   height: 31.25rem; /* 920px */
   width: 57.5rem; /* 500px */
+  margin-top: 1.75em;
   border-radius: var(--radius);
 }
 
