--- a/Newbie/3-column-preview-card-component-main/css/style.css
+++ b/Newbie/3-column-preview-card-component-main/css/style.css
@@ -38,8 +38,8 @@ body {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto;
 
-  height: 31.25rem; /* 920px */
-  width: 57.5rem; /* 500px */
+  height: 31.25em; /* 920px */
+  width: 57.5em; /* 500px */
   margin-top: 2em;
   border-radius: var(--radius);
 
@@ -152,4 +152,54 @@ body {
 .footer__link:hover {
   color: var(--card-orange);
   opacity: 0.7;
+}
+
+@media screen and (max-width: 568px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--v-lightgray);
+
+    height: auto;
+  }
+
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+
+    height: 30em;
+    width: 20em;
+    margin-top: 5em;
+    border-radius: var(--radius);
+
+    position: static;
+    top: 0px;
+    left: 0px;
+    z-index: 0;
+  }
+
+  .grid__cell {
+    padding: 3em;
+  }
+
+  .grid__cell--one {
+    background-color: var(--card-orange);
+    border-top-left-radius: var(--radius);
+    border-top-right-radius: var(--radius);
+    border-bottom-left-radius: 0;
+  }
+
+  .grid__cell--two {
+    background-color: var(--card-darkcyan);
+  }
+
+  .grid__cell--three {
+    background-color: var(--card-v-darkcyan);
+    border-bottom-left-radius: var(--radius);
+    border-bottom-right-radius: var(--radius);
+    border-top-right-radius: 0;
+  }
 }
