--- a/Newbie/3-column-preview-card-component-main/css/style.css
+++ b/Newbie/3-column-preview-card-component-main/css/style.css
@@ -160,7 +160,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: var(--v-lightgray);
+    /* background-color: var(--v-lightgray); */
+    background-color: pink;
 
     height: auto;
   }
@@ -172,7 +173,7 @@ body {
 
     height: 30em;
     width: 20em;
-    margin-top: 5em;
+    margin: 5em auto;
     border-radius: var(--radius);
 
     position: static;
@@ -190,10 +191,6 @@ body {
     border-top-left-radius: var(--radius);
     border-top-right-radius: var(--radius);
     border-bottom-left-radius: 0;
-  }
-
-  .grid__cell--two {
-    background-color: var(--card-darkcyan);
   }
 
   .grid__cell--three {
