readd background color for mobile

--- a/Newbie/3-column-preview-card-component-main/css/style.css
+++ b/Newbie/3-column-preview-card-component-main/css/style.css
@@ -161,8 +161,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* background-color: var(--v-lightgray); */
-    background-color: #fff;
+    background-color: var(--v-lightgray);
     height: auto;
   }
 
