update readme markdown

--- a/Newbie/3-column-preview-card-component-main/css/style.css
+++ b/Newbie/3-column-preview-card-component-main/css/style.css
@@ -161,8 +161,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: var(--v-lightgray);
     height: auto;
+    background-color: var(--v-lightgray) !important;
   }
 
   .grid {
