--- a/Newbie/profile-card-component-main/css/index.css
+++ b/Newbie/profile-card-component-main/css/index.css
@@ -24,8 +24,31 @@ ul {
   background-size: auto;
 }
 .container .card {
-  width: 400px;
-  height: 400px;
+  width: 330px;
+  height: 380px;
   border-radius: 15px;
-  border: 1px solid grey;
+  background-color: #fff;
+  font-size: 18px;
+}
+.container .card__pattern {
+  background-image: url(/images/bg-pattern-card.svg);
+  width: auto;
+  height: 8em;
+  position: relative;
+  z-index: 0;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+.container .card .profile {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  bottom: 13%;
+  z-index: 1;
+}
+.container .card .profile__img {
+  border-radius: 100%;
+  border: 5px solid #fff;
 }
