--- a/Newbie/profile-card-component-main/css/index.scss
+++ b/Newbie/profile-card-component-main/css/index.scss
@@ -50,9 +50,35 @@ ul {
   background-size: auto;
 
   .card {
-    width: 400px;
-    height: 400px;
+    width: 330px;
+    height: 380px;
     border-radius: $radius;
-    border: 1px solid grey;
+    background-color: #fff;
+    font-size: $font-size;
+
+    &__pattern {
+      background-image: $bg-card;
+      width: auto;
+      height: 8em;
+      position: relative;
+      z-index: 0;
+      border-top-left-radius: $radius;
+      border-top-right-radius: $radius;
+    }
+
+    .profile {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      bottom: 13%;
+      z-index: 1;
+
+      &__img {
+        border-radius: 100%;
+        border: 5px solid #fff;
+      }
+    }
   }
 }
