--- a/Newbie/profile-card-component-main/css/index.scss
+++ b/Newbie/profile-card-component-main/css/index.scss
@@ -79,6 +79,18 @@ ul {
         border-radius: 100%;
         border: 5px solid #fff;
       }
+
+      &__name,
+      &__value > h2 {
+        font-size: 1.2rem;
+        color: $drk-desat-blue;
+      }
+
+      &__age,
+      &__location,
+      &__value > p {
+        color: $drk-gray;
+      }
     }
   }
 }
